Add complete Vulkan build dependencies
- Add vulkan-validationlayers-dev for Vulkan headers
- Add spirv-tools for shader compilation
- glslang-tools provides glslc compiler needed by FindVulkan

--- a/.github/workflows/build-release-bundles.yml
+++ b/.github/workflows/build-release-bundles.yml
@@ -37,7 +37,7 @@ jobs:
           
           # Install Vulkan dependencies if needed
           if [ "${{ matrix.variant }}" = "vulkan" ]; then
-            sudo apt-get install -y libvulkan-dev glslang-tools
+            sudo apt-get install -y libvulkan-dev glslang-tools vulkan-validationlayers-dev spirv-tools
           fi
       
       - name: Clone llama.cpp
