--- a/desktop/package.json
+++ b/desktop/package.json
@@ -1,19 +1,28 @@
 {
-  "name": "offgrid-desktop",
-  "version": "1.0.0",
-  "description": "OffGrid LLM Desktop Application",
-  "author": "OffGrid LLM Team",
+  "name": "offgrid-llm-desktop",
+  "version": "0.1.3",
+  "description": "OffGrid LLM Desktop - Local AI Platform",
+  "homepage": "https://github.com/takuphilchan/offgrid-llm",
+  "author": {
+    "name": "OffGrid LLM Team",
+    "email": "team@offgrid-llm.dev"
+  },
+  "license": "MIT",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "dist": "electron-builder",
-    "dist:linux": "electron-builder --linux",
-    "dist:mac": "electron-builder --mac",
-    "dist:win": "electron-builder --win"
+    "dev": "electron . --dev",
+    "build": "electron-builder",
+    "build:linux": "electron-builder --linux",
+    "build:mac": "electron-builder --mac",
+    "build:win": "electron-builder --win",
+    "build:all": "electron-builder -mwl",
+    "package": "npm run build:all"
   },
   "build": {
-    "appId": "com.offgrid.llm",
-    "productName": "OffGrid LLM",
+    "appId": "com.offgrid.llm.desktop",
+    "productName": "OffGrid LLM Desktop",
+    "copyright": "Copyright © 2024-2025 OffGrid LLM Team",
     "directories": {
       "buildResources": "assets",
       "output": "dist"
@@ -22,20 +31,111 @@
       "main.js",
       "preload.js",
       "index.html",
-      "README.md"
+      "package.json"
+    ],
+    "extraResources": [
+      {
+        "from": "../build/linux/offgrid",
+        "to": "bin/",
+        "filter": ["**/*"]
+      },
+      {
+        "from": "../build/macos/offgrid",
+        "to": "bin/",
+        "filter": ["**/*"]
+      },
+      {
+        "from": "../build/windows/offgrid.exe",
+        "to": "bin/",
+        "filter": ["**/*"]
+      }
     ],
     "linux": {
-      "target": ["AppImage"],
-      "category": "Development"
+      "target": [
+        {
+          "target": "AppImage",
+          "arch": ["x64", "arm64"]
+        },
+        {
+          "target": "deb",
+          "arch": ["x64", "arm64"]
+        }
+      ],
+      "category": "Development",
+      "icon": "assets/icon.png",
+      "maintainer": "OffGrid LLM Team <team@offgrid-llm.dev>",
+      "desktop": {
+        "Name": "OffGrid LLM Desktop",
+        "GenericName": "Local AI Platform",
+        "Comment": "Run LLMs locally without internet",
+        "Categories": "Development;Science;Education;",
+        "Keywords": "ai;llm;ml;offline;"
+      },
+      "executableName": "offgrid-llm-desktop",
+      "artifactName": "${productName}-${version}-${arch}.${ext}"
     },
     "mac": {
-      "target": ["dmg"],
-      "category": "public.app-category.developer-tools"
+      "target": [
+        {
+          "target": "dmg",
+          "arch": ["x64", "arm64", "universal"]
+        }
+      ],
+      "category": "public.app-category.developer-tools",
+      "icon": "assets/icon.icns",
+      "hardenedRuntime": true,
+      "gatekeeperAssess": false,
+      "artifactName": "${productName}-${version}-${arch}.${ext}"
+    },
+    "dmg": {
+      "title": "OffGrid LLM Desktop ${version}",
+      "icon": "assets/icon.icns",
+      "contents": [
+        {
+          "x": 130,
+          "y": 220
+        },
+        {
+          "x": 410,
+          "y": 220,
+          "type": "link",
+          "path": "/Applications"
+        }
+      ]
     },
     "win": {
-      "target": ["nsis"],
-      "executableName": "OffGrid"
+      "target": [
+        {
+          "target": "nsis",
+          "arch": ["x64"]
+        },
+        {
+          "target": "portable",
+          "arch": ["x64"]
+        }
+      ],
+      "icon": "assets/icon.ico",
+      "artifactName": "${productName}-Setup-${version}.${ext}"
+    },
+    "nsis": {
+      "oneClick": false,
+      "perMachine": true,
+      "allowToChangeInstallationDirectory": true,
+      "createDesktopShortcut": true,
+      "createStartMenuShortcut": true,
+      "shortcutName": "OffGrid LLM Desktop",
+      "installerIcon": "assets/icon.ico",
+      "uninstallerIcon": "assets/icon.ico",
+      "license": "../LICENSE",
+      "warningsAsErrors": false
+    },
+    "portable": {
+      "artifactName": "${productName}-${version}-Portable.${ext}"
     }
+  },
+  "dependencies": {
+    "electron-store": "^8.1.0",
+    "axios": "^1.6.0"
   },
   "devDependencies": {
     "electron": "^27.0.0",
