chore: Reorganize repository structure and consolidate installers
- Moved desktop installers to installers/ folder (desktop.sh, desktop.ps1)
- Removed duplicate CLI installers from installers/ folder
- Updated .gitignore to exclude build artifacts (dist/, node_modules/)
- Removed offgrid binary from root (should be in build/ folder)
- Updated all documentation with correct installer paths
- Clarified installer differences in installers/README.md

Repository structure now:
- install.sh (root) -> CLI installation
- installers/desktop.sh -> Desktop app installation (Linux/macOS)
- installers/desktop.ps1 -> Desktop app installation (Windows)

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,12 @@ offgrid-*
 *.dll
 *.so
 *.dylib
+
+# Build outputs
 dist/
+desktop/dist/
+desktop/node_modules/
+node_modules/
 
 # Temporary notes
 DEMO_COMMANDS.md
